# foxdot-ai-integration

./: .gitignore  README.md  TODO  claude_desktop_config.example.json  idea.md  milvus-idea.py  milvus.db  pyproject.toml  run.sh  sqlite-idea.py  streamlit_app.py
basic-pitch/: .dockerignore  Dockerfile
convert/: Dockerfile  conv.ipynb  main.rb  run.sh
convert/data/: out.rb
convert/data/output/: sample_piano.rb  (+1 more)
data/: 20260224.py  20260224_012429.py  20260224_012805.py  20260224_015606.py  20260224_025021.py  20260224_144817.py  20260224_145726.py  20260224_145836.py  20260224_150301.py  20260225_003822.py  20260309_000_gpt.py  20260510_031346.py  20260510_032252.py  20260510_034304.py  20260510_0350000.py  20260510_035529.py  20260510_0360000.py  20260510_042505.py  20260510_043241.py  langgraph.py  play_sound_2.py  play_sound_3.py  play_sound_4.py  some.py
fox_dot/: INSTRUCT.md  chain-of-thought.md  sample.py
mcp/: pyproject.toml
mcp/data/: som.py  some2.yml
mcp/src/: main.py  osc_test.py  sample.rb
scripts/: generate_foxdot_stub.py  seed_repository.py
src/agent/: __init__.py  graph.py  handler.py  prompt.py  state.py
src/components/: app.py  file_content.py  file_content_v2.py  file_list.py  file_list_v2.py  home.py  home_v2.py  new_file.py  new_file_v2.py  regenerate.py
src/config/: config.py
src/env/: __init__.py  env.py
src/fs/: watcher.py  writer.py
src/process/: __init__.py  manager.py
src/repository/: __init__.py  models.py  store.py
src/resources/: __init__.py  instance.py  resources.py
transcribe/: basic_pitch.ipynb  run.sh
(+25 files in other folders)
