[project]
name = "mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "foxdot>=0.9.0",
    "gradio>=6.6.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langfuse>=3.14.5",
    "langgraph>=1.0.9",
    "pyright>=1.1.400",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
    "watchdog>=6.0.0",
]
