[project]
name = "mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "foxdot>=0.9.0",
    "gradio==6.7.0",
    "langchain>=1.2.18",
    "langchain-openai>=1.1.10",
    "langfuse>=3.14.5",
    "langgraph>=1.0.9",
    "pydantic>=2.12.5",
    "pymilvus[milvus-lite]>=2.5.0",
    "pyright>=1.1.400",
    "python-dotenv>=1.2.1",
    "setuptools==81.0.0",
    "streamlit>=1.57.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = ["poethepoet>=0.42.1"]

[tool.poe.tasks]
st = "streamlit run streamlit_app.py"
